DPO-3125 use correct track with stop-id